<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    tools:ignore="UseCompoundDrawables"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteX="16dp"
    tools:layout_editor_absoluteY="0dp">
    <LinearLayout
        android:id="@+id/Diff_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_marginVertical="5dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/pb_1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp"
            android:layout_marginStart="10dp"
            android:text="@string/diff_1"
            android:textSize="10sp"
            tools:ignore="SmallSp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Diff_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Diff_1">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_marginVertical="5dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/pb_2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp"
            android:layout_marginStart="10dp"
            android:text="@string/diff_2"
            android:textSize="10sp"
            tools:ignore="SmallSp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Diff_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Diff_2">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_marginVertical="5dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/pb_3"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp"
            android:layout_marginStart="10dp"
            android:text="@string/diff_3"
            android:textSize="10sp"
            tools:ignore="SmallSp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Diff_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Diff_3">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_marginVertical="5dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/pb_4"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp"
            android:layout_marginStart="10dp"
            android:text="@string/diff_4"
            android:textSize="10sp"
            tools:ignore="SmallSp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Diff_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Diff_4">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_marginVertical="5dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/pb_5"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp"
            android:layout_marginStart="10dp"
            android:text="@string/diff_5"
            android:textSize="10sp"
            tools:ignore="SmallSp"/>
    </LinearLayout>
    </RelativeLayout>
