<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parentLayout"
    tools:context=".ObjectActivity">
    <RelativeLayout
        android:id="@+id/HeadObj"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorHead"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:id="@+id/ObjectName"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/check_object"
            android:gravity="center"
            android:text="@string/NameObj"
            android:textSize="25sp" />
        <CheckBox
            android:id="@+id/check_object"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:layout_gravity="end"
            android:contentDescription="@string/Profile"
            android:gravity="center"
            android:onClick="onClick"/>

        <!--<de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:layout_gravity="end"
            android:contentDescription="@string/Profile"
            android:gravity="end"
            android:onClick="onClick"
            android:src="@drawable/im1"
            app:civ_border_color="#FFFFFF"
            app:civ_border_width="1dp" />-->

    </RelativeLayout> <!-- Шапка -->

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#9EF2FA"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HeadObj">

        <ImageView
            android:id="@+id/image_object"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginVertical="10sp"
            android:src="@drawable/preview" />
        <RatingBar
            android:id="@+id/rating_object"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="186dp"
            android:layout_height="44dp"
            android:layout_alignStart="@+id/image_object"
            android:layout_alignLeft="@+id/image_object"
            android:layout_alignTop="@+id/image_object"
            android:layout_alignEnd="@+id/image_object"
            android:layout_alignRight="@+id/image_object"
            android:layout_alignBottom="@+id/image_object"
            android:layout_marginStart="177dp"
            android:layout_marginLeft="177dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="147dp"
            android:background="@color/colorAccent" />

        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignStart="@+id/image_object"
            android:layout_alignLeft="@+id/image_object"
            android:layout_alignTop="@+id/image_object"
            android:layout_alignEnd="@+id/image_object"
            android:layout_alignRight="@+id/image_object"
            android:layout_alignBottom="@+id/image_object"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="141dp"
            android:layout_marginEnd="311dp"
            android:layout_marginRight="311dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp">

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:foreground="@drawable/goe"
                android:background="@color/design_default_color_background"/>


        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">


        <TextView
            android:id="@+id/Obj_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ellipsize="end"
            android:text="@string/info"
            android:textSize="16sp" />


        <Button
            style="@style/CardView"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:text="подробнее" />


    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">



    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>